-began troubleshooting layout issues

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -188,7 +188,7 @@ a {
   font-size: 1.8rem;
   font-weight: 600;
   letter-spacing: 2px;
-  padding: 1.5rem 3rem;
+  padding: 1.5rem 4vw;
   text-transform: uppercase;
   white-space: nowrap;
   text-align: center;
@@ -261,6 +261,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 2rem 2rem;
+  width: 0;
 }
 .input-group .btn {
   margin: 4px;
@@ -678,13 +679,14 @@ a {
 }
 .block-domain__prices {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 6rem);
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 6rem);
   justify-items: center;
   font-weight: bold;
   font-size: 2rem;
   max-width: 760px;
   margin: 0 auto;
+  color: var(--color-headings);
 }
 .block-domain__content {
   max-width: 690px;
